test/valid/64361_check_positive_value/check_positive.agu
-- Author: fc64361, Gustavo Henriques

let testPositiveAssignment(x) : Int -> Unit =
    if x > 0 then
        print(true)
    else
        print(false)

let main(_) : Unit -> Unit =
    testPositiveAssignment(-10); -- Should print "x is negative"
    testPositiveAssignment(10)   -- Should print "x is positive"