test/invalid-syntax/64361_wrong_type_keyword/wrong_type_keyword.agu
-- Author: fc64361 , Gustavo Henriques

let x : integer = 10 -- lexical error: integer is not the keyword (should be Int)